force-app/main/default/objects/Billing_Product_Detail__c.object
<CustomObject>
    <description>Stores the rate information for the different Cov Codes on a Billing Product.</description>
    <fields>
        <fullName>Billing_Product__c</fullName>
        <label>Billing Product</label>
        <referenceTo>Billing_Product__c</referenceTo>
        <relationshipName>Billing_Product_Coverage_Tier</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cov_Code_Formula__c</fullName>
        <formula>CASE( TEXT (Coverage_Code_Type__c ) ,
 &apos;Complementary Cov Code&apos;,  Billing_Product__r.Complementary_Coverage_Code__c , 
 &apos;Dental Cov Code&apos;, Billing_Product__r.Dental_Coverage_Code__c   ,
 &apos;Drug Cov Code&apos;,  Billing_Product__r.Drug_Coverage_Code__c    ,
 &apos;Med Cov Code&apos;,  Billing_Product__r.Med_Coverage_Code__c   ,
 &apos;Vision Cov Code&apos;,  Billing_Product__r.Vision_Coverage_Code__c    ,
 &apos;Data Issue&apos;
)</formula>
        <label>Cov Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Code_Type__c</fullName>
        <label>Coverage Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Coverage_Code_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single__c</fullName>
        <label>Single</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Child__c</fullName>
        <label>Sub / Child</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Children__c</fullName>
        <label>Sub / Children</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Spouse__c</fullName>
        <label>Sub / Spouse</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Two_Party__c</fullName>
        <label>Two Party</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Product Detail</label>
    <nameField>
        <displayFormat>BPD-{00000}</displayFormat>
        <label>Billing Product Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>