force-app/main/default/objects/Billing_Product_Detail__c/fields/Cov_Code__c.field-meta.xml
<CustomField>
    <fullName>Cov_Code__c</fullName>
    <label>Cov Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>